parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AS
    BECOME
    BOX
    COLON
    CREATE
    DO
    DYN
    ENUM
    EXTERN
    FALSE
    FINAL
    IMPL
    MAIN
    MATCH
    MOD
    MOVE
    PRIV
    PUB
    REF
    RETURN
    SELF
    TRAIT
    TRUE
    TRY
    TYPE
    TYPEOF
    UNION
    UNSAFE
    UNSIZED
    USE
    VIRTUAL
    WHERE
    YIELD
    sELF

Grammar

Rule 0     S' -> start
Rule 1     start -> declaracao_variavel_externa
Rule 2     start -> declaracao_constante
Rule 3     start -> declaracao_funcao
Rule 4     start -> declaracao_variavel_externa start
Rule 5     start -> declaracao_constante start
Rule 6     start -> declaracao_funcao start
Rule 7     declaracao_variavel_externa -> STATIC ID ASSIGN expressao
Rule 8     declaracao_variavel_externa -> STATIC ID DOISPONTOS TIPO ASSIGN expressao
Rule 9     declaracao_constante -> CONST ID ASSIGN expressao
Rule 10    declaracao_constante -> CONST ID DOISPONTOS TIPO ASSIGN expressao
Rule 11    declaracao_variavel -> LET ID ASSIGN expressao
Rule 12    declaracao_variavel -> LET MUT ID ASSIGN expressao
Rule 13    declaracao_variavel -> LET ID DOISPONTOS TIPO ASSIGN expressao
Rule 14    declaracao_variavel -> LET MUT ID DOISPONTOS TIPO ASSIGN expressao
Rule 15    expressao -> expressao_com_bloco
Rule 16    expressao -> expressao_sem_bloco
Rule 17    expressao_com_bloco -> expressao_de_bloco
Rule 18    expressao_com_bloco -> expressao_de_loop
Rule 19    expressao_com_bloco -> expressao_de_if
Rule 20    expressao_de_bloco -> LEFTKEY declaracao RIGHTKEY
Rule 21    declaracao -> SEMICOLON
Rule 22    declaracao -> expressao
Rule 23    expressao_de_loop -> expressao_loop_infinito
Rule 24    expressao_de_loop -> expressao_loop_predicado
Rule 25    expressao_de_loop -> expressao_loop_iterador
Rule 26    expressao_loop_infinito -> LOOP expressao_de_bloco
Rule 27    expressao_loop_predicado -> WHILE expressao_de_bloco
Rule 28    expressao_loop_iterador -> FOR ID IN expressao
Rule 29    expressao_parada -> BREAK
Rule 30    expressao_continue -> CONTINUE
Rule 31    expressao_de_if -> IF expressao expressao_de_bloco ELSE expressao_de_bloco
Rule 32    expressao_de_if -> IF expressao expressao_de_bloco ELSE expressao_de_if
Rule 33    declaracao_funcao -> FN ID LEFTPAREN parametros_da_funcao RIGHTPAREN tipo_de_retorno LEFTPAREN expressao_de_bloco RIGHTPAREN
Rule 34    parametros_da_funcao -> ID DOISPONTOS TIPO
Rule 35    tipo_de_retorno -> MINUS GREATER TIPO
Rule 36    expressao_sem_bloco -> literal_expression
Rule 37    expressao_sem_bloco -> group_expression
Rule 38    expressao_sem_bloco -> call_expression
Rule 39    expressao_sem_bloco -> index_expression
Rule 40    literal_expression -> INT
Rule 41    literal_expression1 -> FLOAT
Rule 42    exp -> exp1 ASSIGN exp
Rule 43    exp -> exp1 ASSIGN_PLUS exp
Rule 44    exp -> exp1 ASSIGN_MINUS exp
Rule 45    exp -> exp1 ASSIGN_TIMES exp
Rule 46    exp -> exp1 ASSIGN_DIVIDE exp
Rule 47    exp -> exp1 ASSIGN_RESDIV exp
Rule 48    exp -> exp1 ASSIGN_AND exp
Rule 49    exp -> exp1 ASSIGN_OR exp
Rule 50    exp -> exp1 ASSIGN_XOR exp
Rule 51    exp -> exp1 ASSIGN_LEFTSHIFT exp
Rule 52    exp -> exp1 ASSIGN_RIGHTSHIFT exp
Rule 53    exp -> exp1
Rule 54    exp1 -> exp1 OR exp2
Rule 55    exp1 -> exp2
Rule 56    exp2 -> exp2 AND exp3
Rule 57    exp2 -> exp3
Rule 58    exp3 -> exp3 EQUAL exp4
Rule 59    exp3 -> exp3 NOTEQUAL exp4
Rule 60    exp3 -> exp3 LOWER exp4
Rule 61    exp3 -> exp3 GREATER exp4
Rule 62    exp3 -> exp3 LOWEREQUAL exp4
Rule 63    exp3 -> exp3 GREATEREQUAL exp4
Rule 64    exp3 -> exp4
Rule 65    exp4 -> exp4 SINGLEOR exp5
Rule 66    exp4 -> exp5
Rule 67    exp5 -> exp5 XOR exp6
Rule 68    exp5 -> exp6
Rule 69    exp6 -> exp6 AMPERSAND exp7
Rule 70    exp6 -> exp7
Rule 71    exp7 -> exp7 LEFTSHIFT exp8
Rule 72    exp7 -> exp7 RIGHTSHIFT exp8
Rule 73    exp7 -> exp8
Rule 74    exp8 -> exp8 PLUS exp9
Rule 75    exp8 -> exp8 MINUS exp9
Rule 76    exp8 -> exp9
Rule 77    exp9 -> exp9 TIMES exp10
Rule 78    exp9 -> exp9 DIVIDE exp10
Rule 79    exp9 -> exp9 RESDIV exp10
Rule 80    exp9 -> exp10
Rule 81    exp10 -> MINUS exp10
Rule 82    exp10 -> NOT exp10
Rule 83    exp10 -> expressao_sem_bloco
Rule 84    group_expression -> LEFTPAREN expressao RIGHTPAREN
Rule 85    call_expression -> expressao LEFTPAREN call_params RIGHTPAREN
Rule 86    call_params -> expressao LEFTPAREN expressao RIGHTPAREN
Rule 87    index_expression -> expressao LEFTBRACKET expressao RIGHTBRACKET

Terminals, with rules where they appear

ABSTRACT             : 
AMPERSAND            : 69
AND                  : 56
AS                   : 
ASSIGN               : 7 8 9 10 11 12 13 14 42
ASSIGN_AND           : 48
ASSIGN_DIVIDE        : 46
ASSIGN_LEFTSHIFT     : 51
ASSIGN_MINUS         : 44
ASSIGN_OR            : 49
ASSIGN_PLUS          : 43
ASSIGN_RESDIV        : 47
ASSIGN_RIGHTSHIFT    : 52
ASSIGN_TIMES         : 45
ASSIGN_XOR           : 50
BECOME               : 
BOX                  : 
BREAK                : 29
COLON                : 
CONST                : 9 10
CONTINUE             : 30
CREATE               : 
DIVIDE               : 78
DO                   : 
DOISPONTOS           : 8 10 13 14 34
DYN                  : 
ELSE                 : 31 32
ENUM                 : 
EQUAL                : 58
EXTERN               : 
FALSE                : 
FINAL                : 
FLOAT                : 41
FN                   : 33
FOR                  : 28
GREATER              : 35 61
GREATEREQUAL         : 63
ID                   : 7 8 9 10 11 12 13 14 28 33 34
IF                   : 31 32
IMPL                 : 
IN                   : 28
INT                  : 40
LEFTBRACKET          : 87
LEFTKEY              : 20
LEFTPAREN            : 33 33 84 85 86
LEFTSHIFT            : 71
LET                  : 11 12 13 14
LOOP                 : 26
LOWER                : 60
LOWEREQUAL           : 62
MAIN                 : 
MATCH                : 
MINUS                : 35 75 81
MOD                  : 
MOVE                 : 
MUT                  : 12 14
NOT                  : 82
NOTEQUAL             : 59
OR                   : 54
PLUS                 : 74
PRIV                 : 
PUB                  : 
REF                  : 
RESDIV               : 79
RETURN               : 
RIGHTBRACKET         : 87
RIGHTKEY             : 20
RIGHTPAREN           : 33 33 84 85 86
RIGHTSHIFT           : 72
SELF                 : 
SEMICOLON            : 21
SINGLEOR             : 65
STATIC               : 7 8
TIMES                : 77
TIPO                 : 8 10 13 14 34 35
TRAIT                : 
TRUE                 : 
TRY                  : 
TYPE                 : 
TYPEOF               : 
UNION                : 
UNSAFE               : 
UNSIZED              : 
USE                  : 
VIRTUAL              : 
WHERE                : 
WHILE                : 27
XOR                  : 67
YIELD                : 
error                : 
sELF                 : 

Nonterminals, with rules where they appear

call_expression      : 38
call_params          : 85
declaracao           : 20
declaracao_constante : 2 5
declaracao_funcao    : 3 6
declaracao_variavel  : 
declaracao_variavel_externa : 1 4
exp                  : 42 43 44 45 46 47 48 49 50 51 52
exp1                 : 42 43 44 45 46 47 48 49 50 51 52 53 54
exp10                : 77 78 79 80 81 82
exp2                 : 54 55 56
exp3                 : 56 57 58 59 60 61 62 63
exp4                 : 58 59 60 61 62 63 64 65
exp5                 : 65 66 67
exp6                 : 67 68 69
exp7                 : 69 70 71 72
exp8                 : 71 72 73 74 75
exp9                 : 74 75 76 77 78 79
expressao            : 7 8 9 10 11 12 13 14 22 28 31 32 84 85 86 86 87 87
expressao_com_bloco  : 15
expressao_continue   : 
expressao_de_bloco   : 17 26 27 31 31 32 33
expressao_de_if      : 19 32
expressao_de_loop    : 18
expressao_loop_infinito : 23
expressao_loop_iterador : 25
expressao_loop_predicado : 24
expressao_parada     : 
expressao_sem_bloco  : 16 83
group_expression     : 37
index_expression     : 39
literal_expression   : 36
literal_expression1  : 
parametros_da_funcao : 33
start                : 4 5 6 0
tipo_de_retorno      : 33

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . declaracao_variavel_externa
    (2) start -> . declaracao_constante
    (3) start -> . declaracao_funcao
    (4) start -> . declaracao_variavel_externa start
    (5) start -> . declaracao_constante start
    (6) start -> . declaracao_funcao start
    (7) declaracao_variavel_externa -> . STATIC ID ASSIGN expressao
    (8) declaracao_variavel_externa -> . STATIC ID DOISPONTOS TIPO ASSIGN expressao
    (9) declaracao_constante -> . CONST ID ASSIGN expressao
    (10) declaracao_constante -> . CONST ID DOISPONTOS TIPO ASSIGN expressao
    (33) declaracao_funcao -> . FN ID LEFTPAREN parametros_da_funcao RIGHTPAREN tipo_de_retorno LEFTPAREN expressao_de_bloco RIGHTPAREN

    STATIC          shift and go to state 5
    CONST           shift and go to state 6
    FN              shift and go to state 7

    start                          shift and go to state 1
    declaracao_variavel_externa    shift and go to state 2
    declaracao_constante           shift and go to state 3
    declaracao_funcao              shift and go to state 4

state 1

    (0) S' -> start .



state 2

    (1) start -> declaracao_variavel_externa .
    (4) start -> declaracao_variavel_externa . start
    (1) start -> . declaracao_variavel_externa
    (2) start -> . declaracao_constante
    (3) start -> . declaracao_funcao
    (4) start -> . declaracao_variavel_externa start
    (5) start -> . declaracao_constante start
    (6) start -> . declaracao_funcao start
    (7) declaracao_variavel_externa -> . STATIC ID ASSIGN expressao
    (8) declaracao_variavel_externa -> . STATIC ID DOISPONTOS TIPO ASSIGN expressao
    (9) declaracao_constante -> . CONST ID ASSIGN expressao
    (10) declaracao_constante -> . CONST ID DOISPONTOS TIPO ASSIGN expressao
    (33) declaracao_funcao -> . FN ID LEFTPAREN parametros_da_funcao RIGHTPAREN tipo_de_retorno LEFTPAREN expressao_de_bloco RIGHTPAREN

    $end            reduce using rule 1 (start -> declaracao_variavel_externa .)
    STATIC          shift and go to state 5
    CONST           shift and go to state 6
    FN              shift and go to state 7

    declaracao_variavel_externa    shift and go to state 2
    start                          shift and go to state 8
    declaracao_constante           shift and go to state 3
    declaracao_funcao              shift and go to state 4

state 3

    (2) start -> declaracao_constante .
    (5) start -> declaracao_constante . start
    (1) start -> . declaracao_variavel_externa
    (2) start -> . declaracao_constante
    (3) start -> . declaracao_funcao
    (4) start -> . declaracao_variavel_externa start
    (5) start -> . declaracao_constante start
    (6) start -> . declaracao_funcao start
    (7) declaracao_variavel_externa -> . STATIC ID ASSIGN expressao
    (8) declaracao_variavel_externa -> . STATIC ID DOISPONTOS TIPO ASSIGN expressao
    (9) declaracao_constante -> . CONST ID ASSIGN expressao
    (10) declaracao_constante -> . CONST ID DOISPONTOS TIPO ASSIGN expressao
    (33) declaracao_funcao -> . FN ID LEFTPAREN parametros_da_funcao RIGHTPAREN tipo_de_retorno LEFTPAREN expressao_de_bloco RIGHTPAREN

    $end            reduce using rule 2 (start -> declaracao_constante .)
    STATIC          shift and go to state 5
    CONST           shift and go to state 6
    FN              shift and go to state 7

    declaracao_constante           shift and go to state 3
    start                          shift and go to state 9
    declaracao_variavel_externa    shift and go to state 2
    declaracao_funcao              shift and go to state 4

state 4

    (3) start -> declaracao_funcao .
    (6) start -> declaracao_funcao . start
    (1) start -> . declaracao_variavel_externa
    (2) start -> . declaracao_constante
    (3) start -> . declaracao_funcao
    (4) start -> . declaracao_variavel_externa start
    (5) start -> . declaracao_constante start
    (6) start -> . declaracao_funcao start
    (7) declaracao_variavel_externa -> . STATIC ID ASSIGN expressao
    (8) declaracao_variavel_externa -> . STATIC ID DOISPONTOS TIPO ASSIGN expressao
    (9) declaracao_constante -> . CONST ID ASSIGN expressao
    (10) declaracao_constante -> . CONST ID DOISPONTOS TIPO ASSIGN expressao
    (33) declaracao_funcao -> . FN ID LEFTPAREN parametros_da_funcao RIGHTPAREN tipo_de_retorno LEFTPAREN expressao_de_bloco RIGHTPAREN

    $end            reduce using rule 3 (start -> declaracao_funcao .)
    STATIC          shift and go to state 5
    CONST           shift and go to state 6
    FN              shift and go to state 7

    declaracao_funcao              shift and go to state 4
    start                          shift and go to state 10
    declaracao_variavel_externa    shift and go to state 2
    declaracao_constante           shift and go to state 3

state 5

    (7) declaracao_variavel_externa -> STATIC . ID ASSIGN expressao
    (8) declaracao_variavel_externa -> STATIC . ID DOISPONTOS TIPO ASSIGN expressao

    ID              shift and go to state 11


state 6

    (9) declaracao_constante -> CONST . ID ASSIGN expressao
    (10) declaracao_constante -> CONST . ID DOISPONTOS TIPO ASSIGN expressao

    ID              shift and go to state 12


state 7

    (33) declaracao_funcao -> FN . ID LEFTPAREN parametros_da_funcao RIGHTPAREN tipo_de_retorno LEFTPAREN expressao_de_bloco RIGHTPAREN

    ID              shift and go to state 13


state 8

    (4) start -> declaracao_variavel_externa start .

    $end            reduce using rule 4 (start -> declaracao_variavel_externa start .)


state 9

    (5) start -> declaracao_constante start .

    $end            reduce using rule 5 (start -> declaracao_constante start .)


state 10

    (6) start -> declaracao_funcao start .

    $end            reduce using rule 6 (start -> declaracao_funcao start .)


state 11

    (7) declaracao_variavel_externa -> STATIC ID . ASSIGN expressao
    (8) declaracao_variavel_externa -> STATIC ID . DOISPONTOS TIPO ASSIGN expressao

    ASSIGN          shift and go to state 14
    DOISPONTOS      shift and go to state 15


state 12

    (9) declaracao_constante -> CONST ID . ASSIGN expressao
    (10) declaracao_constante -> CONST ID . DOISPONTOS TIPO ASSIGN expressao

    ASSIGN          shift and go to state 16
    DOISPONTOS      shift and go to state 17


state 13

    (33) declaracao_funcao -> FN ID . LEFTPAREN parametros_da_funcao RIGHTPAREN tipo_de_retorno LEFTPAREN expressao_de_bloco RIGHTPAREN

    LEFTPAREN       shift and go to state 18


state 14

    (7) declaracao_variavel_externa -> STATIC ID ASSIGN . expressao
    (15) expressao -> . expressao_com_bloco
    (16) expressao -> . expressao_sem_bloco
    (17) expressao_com_bloco -> . expressao_de_bloco
    (18) expressao_com_bloco -> . expressao_de_loop
    (19) expressao_com_bloco -> . expressao_de_if
    (36) expressao_sem_bloco -> . literal_expression
    (37) expressao_sem_bloco -> . group_expression
    (38) expressao_sem_bloco -> . call_expression
    (39) expressao_sem_bloco -> . index_expression
    (20) expressao_de_bloco -> . LEFTKEY declaracao RIGHTKEY
    (23) expressao_de_loop -> . expressao_loop_infinito
    (24) expressao_de_loop -> . expressao_loop_predicado
    (25) expressao_de_loop -> . expressao_loop_iterador
    (31) expressao_de_if -> . IF expressao expressao_de_bloco ELSE expressao_de_bloco
    (32) expressao_de_if -> . IF expressao expressao_de_bloco ELSE expressao_de_if
    (40) literal_expression -> . INT
    (84) group_expression -> . LEFTPAREN expressao RIGHTPAREN
    (85) call_expression -> . expressao LEFTPAREN call_params RIGHTPAREN
    (87) index_expression -> . expressao LEFTBRACKET expressao RIGHTBRACKET
    (26) expressao_loop_infinito -> . LOOP expressao_de_bloco
    (27) expressao_loop_predicado -> . WHILE expressao_de_bloco
    (28) expressao_loop_iterador -> . FOR ID IN expressao

    LEFTKEY         shift and go to state 29
    IF              shift and go to state 33
    INT             shift and go to state 34
    LEFTPAREN       shift and go to state 35
    LOOP            shift and go to state 36
    WHILE           shift and go to state 37
    FOR             shift and go to state 38

    expressao                      shift and go to state 19
    expressao_com_bloco            shift and go to state 20
    expressao_sem_bloco            shift and go to state 21
    expressao_de_bloco             shift and go to state 22
    expressao_de_loop              shift and go to state 23
    expressao_de_if                shift and go to state 24
    literal_expression             shift and go to state 25
    group_expression               shift and go to state 26
    call_expression                shift and go to state 27
    index_expression               shift and go to state 28
    expressao_loop_infinito        shift and go to state 30
    expressao_loop_predicado       shift and go to state 31
    expressao_loop_iterador        shift and go to state 32

state 15

    (8) declaracao_variavel_externa -> STATIC ID DOISPONTOS . TIPO ASSIGN expressao

    TIPO            shift and go to state 39


state 16

    (9) declaracao_constante -> CONST ID ASSIGN . expressao
    (15) expressao -> . expressao_com_bloco
    (16) expressao -> . expressao_sem_bloco
    (17) expressao_com_bloco -> . expressao_de_bloco
    (18) expressao_com_bloco -> . expressao_de_loop
    (19) expressao_com_bloco -> . expressao_de_if
    (36) expressao_sem_bloco -> . literal_expression
    (37) expressao_sem_bloco -> . group_expression
    (38) expressao_sem_bloco -> . call_expression
    (39) expressao_sem_bloco -> . index_expression
    (20) expressao_de_bloco -> . LEFTKEY declaracao RIGHTKEY
    (23) expressao_de_loop -> . expressao_loop_infinito
    (24) expressao_de_loop -> . expressao_loop_predicado
    (25) expressao_de_loop -> . expressao_loop_iterador
    (31) expressao_de_if -> . IF expressao expressao_de_bloco ELSE expressao_de_bloco
    (32) expressao_de_if -> . IF expressao expressao_de_bloco ELSE expressao_de_if
    (40) literal_expression -> . INT
    (84) group_expression -> . LEFTPAREN expressao RIGHTPAREN
    (85) call_expression -> . expressao LEFTPAREN call_params RIGHTPAREN
    (87) index_expression -> . expressao LEFTBRACKET expressao RIGHTBRACKET
    (26) expressao_loop_infinito -> . LOOP expressao_de_bloco
    (27) expressao_loop_predicado -> . WHILE expressao_de_bloco
    (28) expressao_loop_iterador -> . FOR ID IN expressao

    LEFTKEY         shift and go to state 29
    IF              shift and go to state 33
    INT             shift and go to state 34
    LEFTPAREN       shift and go to state 35
    LOOP            shift and go to state 36
    WHILE           shift and go to state 37
    FOR             shift and go to state 38

    expressao                      shift and go to state 40
    expressao_com_bloco            shift and go to state 20
    expressao_sem_bloco            shift and go to state 21
    expressao_de_bloco             shift and go to state 22
    expressao_de_loop              shift and go to state 23
    expressao_de_if                shift and go to state 24
    literal_expression             shift and go to state 25
    group_expression               shift and go to state 26
    call_expression                shift and go to state 27
    index_expression               shift and go to state 28
    expressao_loop_infinito        shift and go to state 30
    expressao_loop_predicado       shift and go to state 31
    expressao_loop_iterador        shift and go to state 32

state 17

    (10) declaracao_constante -> CONST ID DOISPONTOS . TIPO ASSIGN expressao

    TIPO            shift and go to state 41


state 18

    (33) declaracao_funcao -> FN ID LEFTPAREN . parametros_da_funcao RIGHTPAREN tipo_de_retorno LEFTPAREN expressao_de_bloco RIGHTPAREN
    (34) parametros_da_funcao -> . ID DOISPONTOS TIPO

    ID              shift and go to state 42

    parametros_da_funcao           shift and go to state 43

state 19

    (7) declaracao_variavel_externa -> STATIC ID ASSIGN expressao .
    (85) call_expression -> expressao . LEFTPAREN call_params RIGHTPAREN
    (87) index_expression -> expressao . LEFTBRACKET expressao RIGHTBRACKET

    STATIC          reduce using rule 7 (declaracao_variavel_externa -> STATIC ID ASSIGN expressao .)
    CONST           reduce using rule 7 (declaracao_variavel_externa -> STATIC ID ASSIGN expressao .)
    FN              reduce using rule 7 (declaracao_variavel_externa -> STATIC ID ASSIGN expressao .)
    $end            reduce using rule 7 (declaracao_variavel_externa -> STATIC ID ASSIGN expressao .)
    LEFTPAREN       shift and go to state 44
    LEFTBRACKET     shift and go to state 45


state 20

    (15) expressao -> expressao_com_bloco .

    LEFTPAREN       reduce using rule 15 (expressao -> expressao_com_bloco .)
    LEFTBRACKET     reduce using rule 15 (expressao -> expressao_com_bloco .)
    STATIC          reduce using rule 15 (expressao -> expressao_com_bloco .)
    CONST           reduce using rule 15 (expressao -> expressao_com_bloco .)
    FN              reduce using rule 15 (expressao -> expressao_com_bloco .)
    $end            reduce using rule 15 (expressao -> expressao_com_bloco .)
    RIGHTKEY        reduce using rule 15 (expressao -> expressao_com_bloco .)
    LEFTKEY         reduce using rule 15 (expressao -> expressao_com_bloco .)
    RIGHTPAREN      reduce using rule 15 (expressao -> expressao_com_bloco .)
    RIGHTBRACKET    reduce using rule 15 (expressao -> expressao_com_bloco .)


state 21

    (16) expressao -> expressao_sem_bloco .

    LEFTPAREN       reduce using rule 16 (expressao -> expressao_sem_bloco .)
    LEFTBRACKET     reduce using rule 16 (expressao -> expressao_sem_bloco .)
    STATIC          reduce using rule 16 (expressao -> expressao_sem_bloco .)
    CONST           reduce using rule 16 (expressao -> expressao_sem_bloco .)
    FN              reduce using rule 16 (expressao -> expressao_sem_bloco .)
    $end            reduce using rule 16 (expressao -> expressao_sem_bloco .)
    RIGHTKEY        reduce using rule 16 (expressao -> expressao_sem_bloco .)
    LEFTKEY         reduce using rule 16 (expressao -> expressao_sem_bloco .)
    RIGHTPAREN      reduce using rule 16 (expressao -> expressao_sem_bloco .)
    RIGHTBRACKET    reduce using rule 16 (expressao -> expressao_sem_bloco .)


state 22

    (17) expressao_com_bloco -> expressao_de_bloco .

    LEFTPAREN       reduce using rule 17 (expressao_com_bloco -> expressao_de_bloco .)
    LEFTBRACKET     reduce using rule 17 (expressao_com_bloco -> expressao_de_bloco .)
    STATIC          reduce using rule 17 (expressao_com_bloco -> expressao_de_bloco .)
    CONST           reduce using rule 17 (expressao_com_bloco -> expressao_de_bloco .)
    FN              reduce using rule 17 (expressao_com_bloco -> expressao_de_bloco .)
    $end            reduce using rule 17 (expressao_com_bloco -> expressao_de_bloco .)
    RIGHTKEY        reduce using rule 17 (expressao_com_bloco -> expressao_de_bloco .)
    LEFTKEY         reduce using rule 17 (expressao_com_bloco -> expressao_de_bloco .)
    RIGHTPAREN      reduce using rule 17 (expressao_com_bloco -> expressao_de_bloco .)
    RIGHTBRACKET    reduce using rule 17 (expressao_com_bloco -> expressao_de_bloco .)


state 23

    (18) expressao_com_bloco -> expressao_de_loop .

